@@ -3,16 +3,17 @@
 default: all
 
 all:\
-UNIT_TESTS/ada_size UNIT_TESTS/ada_size.ali UNIT_TESTS/ada_size.o \
-UNIT_TESTS/c_size UNIT_TESTS/c_size.o ag_button.o ag_draw.o ag_event.o \
-ag_surface.o ag_unit.o ag_widget.o ag_window.o agar-gui-ada-conf \
-agar-gui-ada-conf.o agar-gui-ada.a agar-gui-colors.ali agar-gui-colors.o \
-agar-gui-draw.ali agar-gui-draw.o agar-gui-pixelformat.ali \
-agar-gui-pixelformat.o agar-gui-point.ali agar-gui-point.o agar-gui-rect.ali \
-agar-gui-rect.o agar-gui-style.ali agar-gui-style.o agar-gui-surface.ali \
-agar-gui-surface.o agar-gui-text.ali agar-gui-text.o agar-gui-unit.ali \
-agar-gui-unit.o agar-gui-view.ali agar-gui-view.o agar-gui-widget-box.ali \
-agar-gui-widget-box.o agar-gui-widget-button.ali agar-gui-widget-button.o \
+DEMOS/helloworld1 DEMOS/helloworld1.ali DEMOS/helloworld1.o UNIT_TESTS/ada_size \
+UNIT_TESTS/ada_size.ali UNIT_TESTS/ada_size.o UNIT_TESTS/c_size \
+UNIT_TESTS/c_size.o ag_button.o ag_draw.o ag_event.o ag_surface.o ag_unit.o \
+ag_widget.o ag_window.o agar-gui-ada-conf agar-gui-ada-conf.o agar-gui-ada.a \
+agar-gui-colors.ali agar-gui-colors.o agar-gui-draw.ali agar-gui-draw.o \
+agar-gui-pixelformat.ali agar-gui-pixelformat.o agar-gui-point.ali \
+agar-gui-point.o agar-gui-rect.ali agar-gui-rect.o agar-gui-style.ali \
+agar-gui-style.o agar-gui-surface.ali agar-gui-surface.o agar-gui-text.ali \
+agar-gui-text.o agar-gui-unit.ali agar-gui-unit.o agar-gui-view.ali \
+agar-gui-view.o agar-gui-widget-box.ali agar-gui-widget-box.o \
+agar-gui-widget-button.ali agar-gui-widget-button.o \
 agar-gui-widget-checkbox.ali agar-gui-widget-checkbox.o \
 agar-gui-widget-combo.ali agar-gui-widget-combo.o agar-gui-widget-console.ali \
 agar-gui-widget-console.o agar-gui-widget-editable.ali \
@@ -42,6 +43,20 @@ ctxt/repos.o ctxt/slibdir.o ctxt/version.o deinstaller deinstaller.o inst-check 
 inst-check.o inst-copy inst-copy.o inst-dir inst-dir.o inst-link inst-link.o \
 install_core.o install_error.o installer installer.o instchk instchk.o \
 insthier.o
+
+DEMOS/helloworld1:\
+ada-bind ada-link DEMOS/helloworld1.ald DEMOS/helloworld1.ali agar-gui.ali \
+agar-gui-window.ali agar-gui-view.ali agar-gui-ada.a
+	./ada-bind DEMOS/helloworld1.ali
+	./ada-link DEMOS/helloworld1 DEMOS/helloworld1.ali agar-gui-ada.a
+
+DEMOS/helloworld1.ali:\
+ada-compile DEMOS/helloworld1.adb agar-gui-view.ads agar-gui-window.ads \
+agar-gui.ads
+	./ada-compile DEMOS/helloworld1.adb
+
+DEMOS/helloworld1.o:\
+DEMOS/helloworld1.ali
 
 # Mkf-deinstall
 deinstall: deinstaller inst-check inst-copy inst-dir inst-link
@@ -852,7 +867,8 @@ conf-cc
 clean-all: sysdeps_clean tests_clean obj_clean ext_clean
 clean: obj_clean
 obj_clean:
-	rm -f UNIT_TESTS/ada_size UNIT_TESTS/ada_size.ali UNIT_TESTS/ada_size.o \
+	rm -f DEMOS/helloworld1 DEMOS/helloworld1.ali DEMOS/helloworld1.o \
+	UNIT_TESTS/ada_size UNIT_TESTS/ada_size.ali UNIT_TESTS/ada_size.o \
 	UNIT_TESTS/c_size UNIT_TESTS/c_size.o ag_button.o ag_draw.o ag_event.o \
 	ag_surface.o ag_unit.o ag_widget.o ag_window.o agar-gui-ada-conf \
 	agar-gui-ada-conf.o agar-gui-ada.a agar-gui-colors.ali agar-gui-colors.o \
@@ -866,9 +882,9 @@ obj_clean:
 	agar-gui-widget-checkbox.o agar-gui-widget-combo.ali agar-gui-widget-combo.o \
 	agar-gui-widget-console.ali agar-gui-widget-console.o \
 	agar-gui-widget-editable.ali agar-gui-widget-editable.o \
-	agar-gui-widget-file_dialog.ali agar-gui-widget-file_dialog.o \
-	agar-gui-widget-fixed.ali agar-gui-widget-fixed.o
-	rm -f agar-gui-widget-fixed_plotter.ali agar-gui-widget-fixed_plotter.o \
+	agar-gui-widget-file_dialog.ali agar-gui-widget-file_dialog.o
+	rm -f agar-gui-widget-fixed.ali agar-gui-widget-fixed.o \
+	agar-gui-widget-fixed_plotter.ali agar-gui-widget-fixed_plotter.o \
 	agar-gui-widget-graph.ali agar-gui-widget-graph.o agar-gui-widget-hbox.ali \
 	agar-gui-widget-hbox.o agar-gui-widget-hsvpal.ali agar-gui-widget-hsvpal.o \
 	agar-gui-widget-icon.ali agar-gui-widget-icon.o agar-gui-widget-label.ali \
@@ -882,18 +898,18 @@ obj_clean:
 	agar-gui-widget-scrollbar.o agar-gui-widget-separator.ali \
 	agar-gui-widget-separator.o agar-gui-widget-slider.ali agar-gui-widget-slider.o \
 	agar-gui-widget-socket.ali agar-gui-widget-socket.o agar-gui-widget-table.ali \
-	agar-gui-widget-table.o agar-gui-widget-textbox.ali
-	rm -f agar-gui-widget-textbox.o agar-gui-widget-tlist.ali \
-	agar-gui-widget-tlist.o agar-gui-widget-toolbar.ali agar-gui-widget-toolbar.o \
-	agar-gui-widget-ucombo.ali agar-gui-widget-ucombo.o agar-gui-widget-vbox.ali \
-	agar-gui-widget-vbox.o agar-gui-widget.ads agar-gui-widget.ali \
-	agar-gui-widget.o agar-gui-window.ali agar-gui-window.o agar-gui.ali agar-gui.o \
-	chk-opengl chk-opengl.o ctxt/bindir.c ctxt/bindir.o ctxt/ctxt.a ctxt/dlibdir.c \
-	ctxt/dlibdir.o ctxt/incdir.c ctxt/incdir.o ctxt/repos.c ctxt/repos.o \
-	ctxt/slibdir.c ctxt/slibdir.o ctxt/version.c ctxt/version.o deinstaller \
-	deinstaller.o inst-check inst-check.o inst-copy inst-copy.o inst-dir inst-dir.o \
-	inst-link inst-link.o install_core.o install_error.o installer installer.o \
-	instchk instchk.o insthier.o
+	agar-gui-widget-table.o
+	rm -f agar-gui-widget-textbox.ali agar-gui-widget-textbox.o \
+	agar-gui-widget-tlist.ali agar-gui-widget-tlist.o agar-gui-widget-toolbar.ali \
+	agar-gui-widget-toolbar.o agar-gui-widget-ucombo.ali agar-gui-widget-ucombo.o \
+	agar-gui-widget-vbox.ali agar-gui-widget-vbox.o agar-gui-widget.ads \
+	agar-gui-widget.ali agar-gui-widget.o agar-gui-window.ali agar-gui-window.o \
+	agar-gui.ali agar-gui.o chk-opengl chk-opengl.o ctxt/bindir.c ctxt/bindir.o \
+	ctxt/ctxt.a ctxt/dlibdir.c ctxt/dlibdir.o ctxt/incdir.c ctxt/incdir.o \
+	ctxt/repos.c ctxt/repos.o ctxt/slibdir.c ctxt/slibdir.o ctxt/version.c \
+	ctxt/version.o deinstaller deinstaller.o inst-check inst-check.o inst-copy \
+	inst-copy.o inst-dir inst-dir.o inst-link inst-link.o install_core.o \
+	install_error.o installer installer.o instchk instchk.o insthier.o
 ext_clean:
 	rm -f conf-adatype conf-cctype conf-ldtype conf-sosuffix conf-systype mk-ctxt
 
